# algorithms_and_data_structure

./: Cargo.toml  README.md
src/: algorithms.rs  lib.rs  main.rs
src/algorithms/: boolean_expression.rs  caesar_cipher.rs  html_counting.rs  is.rs  palindrome.rs  random_replace.rs  vowel.rs
src/algorithms/random_replace/: builder.rs  simple.rs
