[package]
name = "algorithms_and_data_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
